fix(tabstrip): scrollable tabstrip should not wrap items

--- a/packages/default/scss/tabstrip/_layout.scss
+++ b/packages/default/scss/tabstrip/_layout.scss
@@ -19,7 +19,7 @@
         color: inherit;
         background-color: transparent;
         display: flex;
-        flex-direction: column;
+        flex-flow: column nowrap;
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: $rgba-transparent;
 
@@ -125,6 +125,7 @@
 
             > .k-tabstrip-items {
                 flex: 1 1 auto;
+                flex-wrap: nowrap;
                 white-space: nowrap;
                 overflow: hidden;
             }
